syntax = "proto3";

package transaction;

service TransactionService {
  rpc Deposit (DepositRequest) returns (TransactionResponse);
  rpc Withdraw (WithdrawRequest) returns (TransactionResponse);
  rpc Transfer (TransferRequest) returns (TransactionResponse);
  rpc GetTransaction (GetTransactionRequest) returns (TransactionResponse);
  rpc ListTransactions (ListTransactionsRequest) returns (ListTransactionsResponse);
}

message DepositRequest {
  string account_id = 1;
  double amount = 2;
  string currency = 3;
  string description = 4;
}

message WithdrawRequest {
  string account_id = 1;
  double amount = 2;
  string currency = 3;
  string description = 4;
}

message TransferRequest {
  string from_account_id = 1;
  string to_account_id = 2;
  double amount = 3;
  string currency = 4;
  string description = 5;
}

message GetTransactionRequest {
  string transaction_id = 1;
}

message ListTransactionsRequest {
  string account_id = 1;
}

message TransactionResponse {
  bool success = 1;
  string message = 2;
  Transaction transaction = 3;
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
}

message Transaction {
  string id = 1;
  string type = 2;
  string from_account_id = 3;
  string to_account_id = 4;
  double amount = 5;
  string currency = 6;
  string status = 7;
  string description = 8;
  string created_at = 9;
  string updated_at = 10;
}
